--- a/week_6/index.html
+++ b/week_6/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="authours.html">Authors</a></li>
+                <p>deneme</p>
             </ul>
         </nav>
     </header>
