page change when click in logo

--- a/week_6/index.html
+++ b/week_6/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="img/ansichten-literatur-srf-logo.png" alt="Logo Swiss Authors SRF"></a>
+        <a href="#" ><img id="logo" src="img/ansichten-literatur-srf-logo.png" alt="Logo Swiss Authors SRF"></a>
         <nav>
             <ul>
                 <li class="active"><a href="/">Home</a></li>
